[tool.poetry]
name = "tcpipy"
version = "0.1.0"
description = ""
authors = ["bogeabr <bogea.matheus76@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
rich = "^13.9.2"
psutil = "^6.0.0"

[tool.poetry.scripts]
tcpipy = "tcpipy.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
